// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTableCellReadOnly /> composes the className correctly 1`] = `
<ForwardRef
  className="xui-editabletablecellreadonly test-classname"
  inlineAlignment="start"
/>
`;

exports[`<XUIEditableTableCellReadOnly /> renders correctly 1`] = `
<ForwardRef
  className="xui-editabletablecellreadonly"
  inlineAlignment="start"
>
  XUIEditableTableCellReadOnly
</ForwardRef>
`;
